# Reminiscence

./: .gitignore  README.md
.github/workflows/: build.yml
plans/: 企业级评估报告.md  测试报告v1.1.0.md  追忆-项目规划.md  项目架构分析.md
zhuiyi/: .gitignore  README.md  index.html  package-lock.json  package.json  start.bat
zhuiyi/backend/: .env  .env.example  auth.py  database.py  main.py  requirements.txt  test_data.txt
zhuiyi/backend/models/: data_models.py
zhuiyi/backend/routers/: auth_router.py  avatar.py  chat.py  config.py  data_import.py  tts.py
zhuiyi/backend/services/: avatar_service.py  character_service.py  config_service.py  data_parser.py  feature_extractor.py  llm_service.py  memory_service.py  prompt_service.py  tts_service.py
zhuiyi/backend/tests/: test_api.py
zhuiyi/src/: App.css  App.tsx
zhuiyi/src-tauri/: Cargo.toml  tauri.conf.json
zhuiyi/src-tauri/icons/: icon.icns
zhuiyi/src-tauri/src/: main.rs
