[package]
name = "zhuiyi"
version = "1.2.2"
description = "追忆 - AI数字人系统"
authors = ["you"]
edition = "2021"

[lib]
name = "zhuiyi_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
